# CFPy

./: .gitignore  README.md  cfpy_env.yml  environment.yml  installation_with_pyKasso.txt  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
CFPy/: __init__.py  readme.txt  setup.py
CFPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
CFPy/cfp/: __init__.py  cfp.py  coc.py  crch.py  soc.py  stm.py  write_input.py
CFPy/utils/: nbr.py  plots.py  postprocessing.py  preprocessing.py  update_nam.py
CFPy_Examples/: CFPy_exported_network.txt  CFPy_nbr.nbr  EX01_CFPy_FloPy_I.ipynb  EX03_pyKasso_CFPy_coupling.ipynb  EX03_pyKasso_CFPy_coupling_I.ipynb  EX04_CFPy_FloPy_PreExisting_FloPyModel.ipynb  EX05_CFPy_FloPy_ConduitWell.ipynb  EX06_CFPy_FloPy_II.ipynb  EX07_pyKasso_CFPy_coupling_II.ipynb  EX08_stochastic_pyKasso_FloPy_II.ipynb  EX09_pyKasso_CFPy_coupling_III.ipynb  network_plane_0.txt  network_plane_1.txt  settings.yaml  settings2.yaml  settings3.yaml  settings4.yaml
CFPy_Examples/.ipynb_checkpoints/: CFPy_FloPy-checkpoint.ipynb  CFPy_FloPy_pyKasso-checkpoint.ipynb  CFPy_exported_network-checkpoint.txt  Check_Connections_Inlets_Outlets-checkpoint.ipynb  EX01_CFPy_FloPy_I-checkpoint.ipynb  EX01_CFPy_FloPy_OLD-checkpoint.ipynb  EX02_stochastic_pyKasso_FloPy_I-checkpoint.ipynb  EX03_pyKasso_CFPy_coupling_I-checkpoint.ipynb  (+12 more)
CFPy_TUD.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
GroundWater Paper/: Read.me
vlab/: Q_out.csv  VLAB_01.ipynb  VLAB_02.ipynb  VLAB_03.ipynb  VLAB_04.ipynb  evap.csv  prec.csv  recharge.py
(+1010 files in other folders)
